# mockclock

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  processor.rs
tests/: test_clock.rs
