[package]
name = "mock_clock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# To use this lib as a dependency for another solana program,
# enable the "no-entrypoint" feature
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "=1.9.29"

[dev-dependencies]
solana-program-test = "1.9.29"
solana-sdk = "1.9.29"

[lib]
crate-type = ["cdylib", "lib"]
