[package]
name = "mock_clock"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# To use this lib as a dependency for another solana program,
# enable the "no-entrypoint" feature
no-entrypoint = []
test-sbf = []

[dependencies]
bincode = "*"
solana-program = "=1.14.10"

[dev-dependencies]
solana-program-test = "*"
solana-sdk = "*"

[lib]
crate-type = ["cdylib", "lib"]
